demo/src/main/java/com/example/demo/global/error/exception/GlobalExceptionHandler.java
package com.example.demo.global.error.exception;

import com.example.demo.global.error.ErrorResponse;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.MethodArgumentNotValidException;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
public class GlobalExceptionHandler {

    // CustomException.class로 범위를 지정해 둠
    @ExceptionHandler(CustomException.class)
    public ResponseEntity<ErrorResponse> handle(CustomException e) {
        return ErrorResponse.of(e.getErrorCode());
    }

    // MethodArgumentNotValidException.class로 범위를 지정해 둠
    @ExceptionHandler(MethodArgumentNotValidException.class)
    public ResponseEntity<ErrorResponse> handleValidException(MethodArgumentNotValidException e) {
        return ErrorResponse.of(e);
    }
}
